docroot/sites/all/themes/escrow/sass/printer-friendly.scss
////////////////////////
// Print File
//
// This file gets turned into print.css.
// This file is styles specific to Printed files.
////////////////////////

////////////////////////
// Base Import
////////////////////////
@import 'partials/global/base';
@import 'partials/components/general/general';
@import 'partials/components/header/logo';

$grids: 12;
$gutters: 1/4;
$output: 'isolation';

#logo {
  @include replace-text('../images/c21hull_logo.svg');

  @include degrade-from(svg, false) {
    @include replace-text('../images/c21hull_logo.png');
  }
}

.print-content {
  clear: both;
  border-top: 2px solid $color_gold;
  padding-top: $spacing_default;
}

.listing {
  &.printer-friendly {
    text-transform: uppercase;
    width: 980px; /* needed for PDF */
    margin: 0 auto;
    font-size: .8em;
    position: relative;

    .group-left {
      @include float-span(5);
    }
    .group-right {
      @include float-span(7, 'last');
    }

    p {
      margin: 0;
    }
    h3 {
      background: $color_gray;
      text-align: center;
      padding: $spacing_default;
      margin: 0;
      border: 1px solid black;
      width: 100%;
      @include clearfix();
    }
    .field {
      white-space: nowrap;
      margin: $spacing_default 0;
      @include clearfix();

      &:first-child {
        margin-top: 0;
      }

      .field-label {
        width: 35%;
        margin-right: 1%;
        font-size: .75em;
        line-height: 1.25em;
        display: inline-block;
        text-align: right;
        color: black;
        vertical-align: middle;
        padding-top: 2 * $spacing_default;
      }
      .field-items {
        display: inline-block;
        width: 64%;

        .field-item {
          padding: $spacing_default;
          border: 1px solid black;
          /*width: 14.5em;*/
          width: 100%;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
          min-height: 30px;
        }
      }

      &.field-name-field-listing-personal-property,
      &.field-name-field-listing-outside-features {
        .field-items {
          width: 100%;
          display: block;

          .field-item {
            white-space: normal;
          }
        }
      }
      &.field-name-field-listing-photos {
        @include clearfix();
        img {
          max-width: 32%;
          margin-right: 1%;
          margin-bottom: 1%;
          float: left;
        }
      }
    }

    table.measurements-grid {
      border-spacing: $spacing_default $spacing_default;
      margin-bottom: 2 * $spacing_default;
      width: 100%;

      th {
        color: black;
        border-bottom-color: white;
      }
      thead {
        tr {
          th {
            text-align: center;
          }
        }
      }
      tr {
        th {
          text-align: right;
          width: 10em;
          padding-right: 0;
        }
      }
      td {
        border: 1px solid black;
        min-width: 8em;
        height: 2em;
      }
    }

    .offices {
      position: absolute;
      top: 0;
      right: 0;
      margin-top: 3.5em;

      .address {
        float: right;
        width: 20em;

        span,
        a {
          display: block;
        }
      }
    }
    .field-collection-container,
    .field-collection-view {
      padding: 0;
      margin: 0;
      border: none;
    }
  }

  &.view-mode-print_internal {
    .group-print-seller-info,
    .group-print-sellers {
      margin-top: 4em;

      .seller {
        padding: $spacing_default;
        width: 45%;
        float: left;
        @include clearfix();

        .field-collection-container,
        .field-collection-view {
          padding: 0;
          margin: 0;
          border: none;

          .phone-number,
          .email {
            display: inline-block;
            margin-right: $spacing_default;
          }
          .phone-type,
          .email-type {
            font-size: .8em;
            color: $color_gray_dark;
            display: inline;

            &:before {
              content: "(";
            }
            &:after {
              content: ")";
            }
          }
        }
      }
    }

    .fine-print {
      page-break-before: always;
      font-size: 1.07em;
      position: relative;

      h1 {
        font-size: 1.5em;
      }
      p {
        margin-bottom: 2 * $spacing_default;
        text-transform: none;
      }
      .signature {
        font-size: 1.25em;
        width: 40%;
        margin: $spacing_default 5%;
        float: left;

        span {
          display: inline-block;
          width: 100%;
          border-bottom: 2px solid black;
          line-height: 2.5em;
        }
        p {
          text-align: center;
        }
      }
      .listing_id {
        position: absolute;
        top: 0;
        right: 0;
        color: $color_gray_dark;
        font-style: italic;
      }
    }

    .group-print-location-info {
      position: relative;

      .field {
        width: 50%;

        &.field-name-field-listing-directions {
          width: 48%;
          position: absolute;
          top: 2.5em;
          right: 0;

          .field-label {
            display: block;
            text-align: center;
            width: 100%;
            margin-bottom: $spacing_default;
            padding-bottom: .5 * $spacing_default;
            border-bottom: 1px solid black;
          }
          .field-items {
            display: block;
            width: 100%;

            .field-item {
              width: 100%;
              white-space: normal;
              border: none;
              padding: $spacing_default;
            }
          }
        }

      }
    }

    .field-name-field-listing-notes {
      white-space: normal;
    }

    .field-name-field-seller-first-name,
    .field-name-field-seller-last-name {
      display: inline;
      padding-right: $spacing_default;
    }
  }
}

